# poetry-plugin-shell

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/poetry_plugin_shell/: __init__.py  command.py  plugins.py
tests/: conftest.py  helpers.py  test_helpers.py  test_shell_command.py
